--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,17 +1,23 @@
-<div id="<%= dom_id blog %>">
-  <p>
-    <strong>Title:</strong>
-    <%= blog.title %>
-  </p>
-
-  <p>
-    <strong>Content:</strong>
-    <%= blog.content %>
-  </p>
-
-  <p>
-    <strong>User:</strong>
-    <%= blog.user_uuid %>
-  </p>
-
+<div id="<%= dom_id blog %>" class="card mb-4 shadow-sm">
+  <div class="card-header bg-primary text-white">
+    <h5 class="card-title mb-0"><%= blog.title %></h5>
+  </div>
+  
+  <div class="card-body">
+    <div class="mb-3">
+      <%= blog.content %>
+    </div>
+    
+    <div class="d-flex justify-content-between align-items-center">
+      <small class="text-muted">
+        <i class="bi bi-person-circle me-1"></i> 
+        <%= blog.user_uuid %>
+      </small>
+      
+      <div class="btn-group">
+        <%= link_to "View", blog, class: "btn btn-sm btn-outline-secondary" %>
+        <%= link_to "Edit", edit_blog_path(blog), class: "btn btn-sm btn-outline-primary" %>
+      </div>
+    </div>
+  </div>
 </div>
