--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,10 +1,27 @@
-<h1>Editing blog</h1>
-
-<%= render "form", blog: @blog %>
-
-<br>
-
-<div>
-  <%= link_to "Show this blog", @blog %> |
-  <%= link_to "Back to blogs", blogs_path %>
+<div class="container py-4">
+  <div class="row">
+    <div class="col-lg-8 mx-auto">
+      <div class="card shadow-sm">
+        <div class="card-header bg-primary text-white">
+          <h3 class="mb-0">Editing Blog</h3>
+        </div>
+        
+        <div class="card-body">
+          <%= render "form", blog: @blog %>
+        </div>
+        
+        <div class="card-footer">
+          <div class="d-flex justify-content-between">
+            <%= link_to blogs_path, class: "btn btn-outline-secondary" do %>
+              <i class="bi bi-arrow-left"></i> Back to blogs
+            <% end %>
+            
+            <%= link_to @blog, class: "btn btn-info text-white" do %>
+              <i class="bi bi-eye"></i> View this blog
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
