--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,10 +1,36 @@
-<p style="color: green"><%= notice %></p>
+<div class="container py-4">
+  <% if notice.present? %>
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+      <%= notice %>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  <% end %>
 
-<%= render @blog %>
-
-<div>
-  <%= link_to "Edit this blog", edit_blog_path(@blog) %> |
-  <%= link_to "Back to blogs", blogs_path %>
-
-  <%= button_to "Destroy this blog", @blog, method: :delete %>
+  <div class="row">
+    <div class="col-lg-8 mx-auto">
+      <%= render @blog %>
+      
+      <div class="card mt-4 shadow-sm">
+        <div class="card-header bg-light">
+          <h5 class="mb-0">Blog Actions</h5>
+        </div>
+        <div class="card-body">
+          <div class="d-flex gap-2 align-items-center">
+            <%= link_to edit_blog_path(@blog), class: "btn btn-primary" do %>
+              <i class="bi bi-pencil"></i> Edit this blog
+            <% end %>
+            
+            <%= link_to blogs_path, class: "btn btn-outline-secondary" do %>
+              <i class="bi bi-arrow-left"></i> Back to blogs
+            <% end %>
+            
+            <%= button_to @blog, method: :delete, class: "btn btn-danger ms-auto", 
+                data: { confirm: "Are you sure you want to delete this blog?" } do %>
+              <i class="bi bi-trash"></i> Delete this blog
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
