--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -8,8 +8,24 @@
 
   <div class="row">
     <div class="col-lg-8 mx-auto">
-      <%= render @blog %>
-      
+      <div class="card">
+        <div class="card-header">
+          <h2><%= @blog.title %></h2>
+        </div>
+        <div class="card-body">
+          <p><%= @blog.content %></p>
+          
+          <% if @blog.tags.present? %>
+            <div class="mt-3">
+              <strong>Tags:</strong>
+              <% @blog.tags.split(',').each do |tag| %>
+                <span class="badge bg-secondary"><%= tag.strip %></span>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+
       <div class="card mt-4 shadow-sm">
         <div class="card-header bg-light">
           <h5 class="mb-0">Blog Actions</h5>
@@ -24,8 +40,7 @@
               <i class="bi bi-arrow-left"></i> Back to blogs
             <% end %>
             
-            <%= button_to @blog, method: :delete, class: "btn btn-danger ms-auto", 
-                data: { confirm: "Are you sure you want to delete this blog?" } do %>
+            <%= button_to @blog, method: :delete, class: "btn btn-danger ms-auto", data: { confirm: "Are you sure you want to delete this blog?" } do %>
               <i class="bi bi-trash"></i> Delete this blog
             <% end %>
           </div>
